# bluefang

./: .gitignore  Cargo.toml  Readme.md
examples/: audio_sink.rs  device.rs
src/: lib.rs
src/a2dp/: mod.rs  sbc.rs  sdp.rs
src/avc/: mod.rs
src/avctp/: mod.rs  packets.rs
src/avdtp/: capabilities.rs  endpoint.rs  error.rs  mod.rs  packets.rs  utils.rs
src/avrcp/: error.rs  mod.rs  packets.rs  sdp.rs  session.rs
src/extras/audio/: mod.rs
src/firmware/: mod.rs  realtek.rs
src/firmware/realtek/: commands.rs  info.rs  mod.rs
src/hci/: acl.rs  btsnoop.rs  buffer.rs  connection.rs  event_loop.rs  mod.rs
src/hci/commands/: hci_control.rs  info_params.rs  link_control.rs  link_policy.rs  mod.rs
src/hci/consts/: class_of_device.rs  commands.rs  company_id.rs  events.rs  generate_company_list.py  mod.rs
src/hci/events/: connection.rs  inquiry.rs  mod.rs
src/host/: usb.rs
src/l2cap/: channel.rs  configuration.rs  mod.rs  signaling.rs
src/sdp/: data_element.rs  error.rs  generate_ids.py  ids.rs  mod.rs  service.rs
src/sdp/data_element/: mod.rs  uuid.rs
src/utils/: bytes.rs  futures.rs  iter.rs  mod.rs  mutex_cell.rs
