[package]
name = "bluefang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
nusb = "0.1.8"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
smallvec = "1.13.2"
num_enum = "0.7.2"
parking_lot = "0.12.1"
bitflags = "2.5.0"
bytes = "1"
instructor = { path = "../instructor/instructor", features = ["derive"] }


[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.82"
cpal = "0.15.3"
libsbc-sys = { path = "../../RustRepos/libsbc-rs/libsbc-sys" }