[package]
name = "bluefang"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units=1
# strip="symbols"

[dependencies]
tracing = "0.1.40"
nusb = "0.1.9"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "sync", "fs", "parking_lot", "macros", "time"] }
num_enum = "0.7.2"
parking_lot = "0.12.3"
bitflags = "2.5.0"
pin-project-lite = "0.2.14"
futures-lite = "2.3.0"
bytes = "1"
enum-iterator = "2.1.0"
instructor = { git = "https://github.com/sidit77/instructor.git", features = ["derive"] }
serde = { version = "1", optional = true, features = ["derive"]}


[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt-multi-thread", "signal"]}
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
cpal = "0.15.3"
sbc-rs = { git = "https://github.com/sidit77/sbc-rs.git" }
rubato = { version = "0.15.0", default-features = false }
ringbuf = "0.4.1"
anyhow = "1.0.82"
portable-atomic = { version = "1", features = ["float"] }
console = "0.15.8"